manifests/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-daemonset
spec:
  selector:
    matchLabels:
      app: nginx-app
  temp:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
        - name: nginx
          image: quay.io/mnara/nginx:1.21
