manifests/pod-with-pv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
    - name: nginx
      image: quay.io/mnara/nginx:1.20
      volumeMounts:
      - mountPath: "/usr/share/nginx/html"
        name: data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: data-volume
