manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-container
spec:
  serviceName: statefulset-container
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: quay.io/mnara/nginx:1.21
