manifests/nginx2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx2-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx2
