manifests/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: hostname
    http:
      paths:
      - pathType: Prefix
        path: "/n1"
        backend:
          service:
            name: nginx1-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/n2"
        backend:
          service:
            name: nginx2-svc
            port:
              number: 80
